--- a/src/app/modals/editregimendetail/editregimen.component.html
+++ b/src/app/modals/editregimendetail/editregimen.component.html
@@ -9,40 +9,54 @@
     <div class="modal-body">
       <form class="form" [formGroup]="regimenForm">
           <div class="regimen-detail-form">
-            <div class="regimen-detail-form-3-col">
-              <mat-form-field>
-                <mat-label>Name</mat-label>
-                <input matInput formControlName="dispName">
-              </mat-form-field>
+            <div class="tow-per-column">
+              <div >
+                <mat-form-field>
+                  <mat-label>Name</mat-label>
+                  <input matInput formControlName="dispName">
+                </mat-form-field>
+              </div>
+
+              <div >
+                <mat-form-field>
+                  <mat-label>Emetogenic Potential</mat-label>
+                  <input matInput formControlName="emetogenicPotential">
+                </mat-form-field>
+              </div>
             </div>
+            <div>
+              <div>
+                <h3>Regimen Levels</h3>
+                <mat-chip-list>
+                  <mat-chip *ngFor="let regimenLevel of regimenForm?.controls?.regimenLevels?.controls; let idx=index"
+                            [removable]="true"
+                            (removed)="removeRegimenLevelFromRegimen(idx)">
+                    {{regimenLevel?.value?.level}}
+                    <mat-icon matChipRemove>cancel</mat-icon>
+                  </mat-chip>
+                </mat-chip-list>
+              </div>
 
-            <div class="regimen-detail-form-3-col">
-              <mat-form-field>
-                <mat-label>Emetogenic Potential</mat-label>
-                <input matInput formControlName="emetogenicPotential">
-              </mat-form-field>
+              <div class="regimen-level-form">
+                <div>
+                  <select placeholder="Regimen Level"
+                          (change)="addNewLevel($event.target.value)">
+                    <option>Select Level</option>
+                    <option [value]="level.id" *ngFor="let level of regimenLevelTypes">
+                      {{level?.level}}
+                    </option>
+                  </select>
+                </div>
+
+                <div>
+                  <mat-form-field>
+                    <mat-label>New Regimen Level</mat-label>
+                    <input matInput [formControl]="newLevelType">
+                  </mat-form-field>
+                  <button [disabled]="!newLevelType.valid" (click)="addNewLevel()">Add Level</button>
+                </div>
+              </div>
             </div>
-
-            <div class="regimen-detail-form-3-col">
-              <mat-chip-list>
-                <mat-chip *ngFor="let regimenLevel of regimenDetail?.regimenLevels" [selectable]="selectable"
-                          [removable]="true" (removed)="removeRegimenLevelFromRegimen(regimenLevel)">
-                  {{regimenLevel?.level}}
-                  <mat-icon matChipRemove>cancel</mat-icon>
-                </mat-chip>
-              </mat-chip-list>
-              <mat-form-field>
-                <mat-label>Regimen Level</mat-label>
-                <mat-select [(ngModel)]="regimenDetail.regimenType">
-                  <mat-option>---</mat-option>
-                  <mat-option *ngFor="let regimenLevel of regimenLevels" [value]="regimenLevel">
-                    {{regimenLevel?.level}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-
             <div  class="regimen-detail-form-item regimen-detail-header-schedule">
               <div><h3  class="side-label">Schedule</h3></div>
               <div class="editor">
@@ -63,105 +77,63 @@
                           formControlName="dosageModifications"></ckeditor>
               </div>
             </div>
-          </div>
-      </form>
-            <div class="regimen-detail-form-item"
-                 [innerHTML]="">
+            <div class="regimen-detail-form-item" >
               <div class="heading-with-button"><h3 class="side-label"> Reference </h3>
-                <mat-chip-list>
-                  <mat-chip color="primary">Reference</mat-chip>
-                </mat-chip-list>
               </div>
-              <div  *ngFor="let regimenReference of regimenDetail?.references; let idx=index">
-                <mat-form-field class="reference-input">
-                  <input matInput [(ngModel)]="regimenDetail.references[idx].reference">
-                </mat-form-field>
+              <div formArrayName="references"
+                   *ngFor="let regimenReference of regimenForm?.controls?.references?.controls; let idx=index">
+                <ng-container [formGroup]="regimenReference">
+                  <div class="reference-input-container-top">
+                    <div class="reference-input-container">
+                      <mat-form-field class="reference-input">
+                        <input matInput formControlName="reference">
+                      </mat-form-field>
+                    </div>
+                    <div class="regimen-detail-form-3-col-delete">
+                      <button (click)="removeReference(idx)">X</button>
+                    </div>
+                  </div>
+                </ng-container>
               </div>
+              <div><button (click)="addNewReference()">Add New Reference</button></div>
             </div>
+
+
             <div class="regimen-detail-form-item"
                  [innerHTML]="">
               <div class="heading-with-button"><h3 class="side-label"> Regimen Brands </h3>
-                <mat-chip-list>
-                  <mat-chip color="primary">Add Brand</mat-chip>
-                </mat-chip-list>
               </div>
-              <div class="brand-container" *ngFor="let brand of regimenDetail?.brands; let idx=index">
-                <div class="brand-input">
+              <div class="brand-container"
+                   formArrayName="references"
+                   *ngFor="let brand of regimenForm?.controls?.brands?.controls; let idx=index">
+                <ng-container [formGroup]="brand">
+                <div class="brand-input regimen-detail-form-3-col">
                   <mat-form-field class="reference-input">
                     <mat-label>Generic Name</mat-label>
-                    <input matInput [(ngModel)]="regimenDetail.brands[idx].genericName">
+                    <input matInput formControlName="genericName">
                   </mat-form-field>
                 </div>
-                <mat-divider  [vertical]="true"></mat-divider>
-                <div class="brand-input">
+                <div class="brand-input regimen-detail-form-3-col">
                   <mat-form-field class="reference-input">
                     <mat-label>Brand Name</mat-label>
-                    <input matInput [(ngModel)]="regimenDetail.brands[idx].brandName">
+                    <input matInput formControlName="brandName">
                   </mat-form-field>
                 </div>
-                <mat-divider  [vertical]="true"></mat-divider>
-                <div class="brand-input">
+                <div class="brand-input regimen-detail-form-3-col">
                   <mat-form-field class="reference-input">
                     <mat-label>Manufacturer</mat-label>
-                    <input matInput [(ngModel)]="regimenDetail.brands[idx].manufacturer">
+                    <input matInput formControlName="manufacturer">
                   </mat-form-field>
                 </div>
+                <div class="regimen-detail-form-3-col-delete" >
+                  <button (click)="removeBrand(idx)" >X</button>
+                </div>
+                </ng-container>
               </div>
+              <div><button (click)="addNewBrand()">Add New Brand</button></div>
             </div>
-            <div class="regimen-detail-form-item"> {{regimenDetail.brandNames}}</div>
-      <!--<form class="form">-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Display Name</label>-->
-          <!--<input type="text" class="form-control" placeholder="Name" name="username" [(ngModel)]="RegimenDetail.dispName">-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Schedule</label>-->
-          <!--<ckeditor name="editor1" type="text" class="form-control" [(ngModel)]="RegimenDetail.schedule" skin="moono-lisa" language="en"></ckeditor>-->
-          <!--&lt;!&ndash;          <input type="text" class="form-control" placeholder="Lastname" name="lastname" [(ngModel)]="regimen.schedule">&ndash;&gt;-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Emetogenic Potential</label>-->
-          <!--<textarea type="textarea" class="form-control" placeholder="emetogenicPotential" name="emetogenicPotential" [(ngModel)]="RegimenDetail.emetogenicPotential"></textarea>-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Reference</label>-->
-          <!--<textarea type="textarea" class="form-control" placeholder="reference" name="reference" [(ngModel)]="RegimenDetail.reference"></textarea>-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Dosage Modifications</label>-->
-          <!--<ckeditor type="text" class="form-control"  placeholder="dosageModifications"-->
-                     <!--name="dosageModifications" [(ngModel)]="RegimenDetail.dosageModifications"-->
-                     <!--skin="moono-lisa" language="en"></ckeditor>-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Brand Names</label>-->
-          <!--<textarea type="textarea" class="form-control" placeholder="brandNames" name="brandNames" [(ngModel)]="RegimenDetail.brandNames"></textarea>-->
-        <!--</div>-->
-        <!--<div class="form-group">-->
-          <!--<label class="form-control-label">Regimen Type</label>-->
-<!--&lt;!&ndash;          @TODO add material dropdown here&ndash;&gt;-->
-<!--&lt;!&ndash;          <p-dropdown [options]="levelOptions" [(ngModel)]="RegimenDetail.regimenType" [ngModelOptions]="{standalone: true}"&ndash;&gt;-->
-<!--&lt;!&ndash;                      editable="true" placeholder="Select a regimen type"></p-dropdown>&ndash;&gt;-->
-          <!--<a href="javascript:void(0)" (click)="displayLevelTypeModal()">view levels</a>-->
-        <!--</div>-->
-<!--&lt;!&ndash;        <div class="form-group regimen-cancer-select-container">&ndash;&gt;-->
-<!--&lt;!&ndash;          <label class="form-control-label">Associate to Cancer</label>&ndash;&gt;-->
-<!--&lt;!&ndash;          <p-multiSelect [panelStyle]="{minWidth: '250px'}"&ndash;&gt;-->
-<!--&lt;!&ndash;                         [options]="cancerList" name="selectedCancers"&ndash;&gt;-->
-<!--&lt;!&ndash;                         [filter]="true" filterBy="label"&ndash;&gt;-->
-<!--&lt;!&ndash;                         [(ngModel)]="selectedCancers"&ndash;&gt;-->
-<!--&lt;!&ndash;                         [virtualScroll]="true" itemSize="5"&ndash;&gt;-->
-<!--&lt;!&ndash;          >&ndash;&gt;-->
-
-<!--&lt;!&ndash;            <ng-template let-cancer pTemplate="item">&ndash;&gt;-->
-<!--&lt;!&ndash;              <span >{{cancer.label}}</span>&ndash;&gt;-->
-<!--&lt;!&ndash;            </ng-template>&ndash;&gt;-->
-<!--&lt;!&ndash;          </p-multiSelect>&ndash;&gt;-->
-<!--&lt;!&ndash;          <p>&ndash;&gt;-->
-<!--&lt;!&ndash;            <span *ngFor="let cancer of selectedCancers">{{cancer.title}} ;</span>&ndash;&gt;-->
-<!--&lt;!&ndash;          </p>&ndash;&gt;-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-      <!--</form>-->
+          </div>
+      </form>
     </div>
     <div class="modal-footer">
       <button class="btn btn-default" (click)="close($event)">Cancel</button>
