added code changes to add regimen

--- a/src/app/components/regimendetails/regimendetails.component.html
+++ b/src/app/components/regimendetails/regimendetails.component.html
@@ -63,7 +63,7 @@
                         </div>
                         <div  *ngFor="let regimenReference of regimenDetail?.references; let idx=index">
                           <ul>
-                            <li>{{regimenDetail?.references[idx]?.reference}}</li>
+                            <li>{{regimenDetail?.references[idx]?.referenceValue}}</li>
                           </ul>
                         </div>
                       </div>
