--- a/src/app/modals/editregimendetail/editregimen.component.html
+++ b/src/app/modals/editregimendetail/editregimen.component.html
@@ -86,7 +86,7 @@
                   <div class="reference-input-container-top">
                     <div class="reference-input-container">
                       <mat-form-field class="reference-input">
-                        <input matInput formControlName="reference">
+                        <input matInput formControlName="referenceValue">
                       </mat-form-field>
                     </div>
                     <div class="regimen-detail-form-3-col-delete">
