added code changes to add regimen, add patients, new links to actions on regimen and all other components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,19 @@
     <img  class="logo"
           [src]="'assets/logo.svg'" />
   </li>
-  <li><a [routerLink]="'home'">Home</a></li>
+  <li><a [routerLink]="'patientTypes'">Home</a></li>
+  <li *ngFor="let breadCrumb of breadCrumbs"><a [routerLink]="breadCrumb.link">{{breadCrumb.title}}</a></li>
+  <li class="pull-right"> <a href="javascript:void(0)" (click)="displayAddPatientModal()"> Add Patient </a></li>
+  <li class="pull-right"> <a [routerLink]="'regimenDetails/0'"> All Regimen </a></li>
 </ul>
 <div class="app-root">
   <div class="right-panel container">
     <router-outlet></router-outlet><level-type [config]="{ show: true }" bsModal class="modal fade" *ngIf="displayLevelModal"></level-type>
   </div>
 </div>
+
+
+<app-addpatienttypes [config]="{ show: false }" bsModal
+                     #addModal="bs-modal"
+                     (yes)="addPerson($event)"
+                     class="modal fade"></app-addpatienttypes>
