--- a/src/app/modals/editregimendetail/editregimen.component.scss
+++ b/src/app/modals/editregimendetail/editregimen.component.scss
@@ -101,3 +101,8 @@ mat-form-field.reference-input {
 .regimen-level-form {
   margin-top: 5px;
 }
+
+
+.ck-editor__editable_inline {
+  min-height: 100px;
+}
