--- a/src/app/components/patients/patients.component.html
+++ b/src/app/components/patients/patients.component.html
@@ -1,9 +1,3 @@
-<ul class="breadcrumb b-c-container">
-  <!--  @TODO need to put bread crumbs here-->
-<!--<p-breadcrumb class="bread-crumb-container" [model]="crumbs" ></p-breadcrumb>-->
-<button class="btn btn-primary button-right bread-crumb-button" (click)="goToAllRegiments()">All Regimens</button>
-</ul>
-
 <div class="pad20"></div>
 <div class="container-fluid">
   <div class="animated fadeIn">
@@ -11,7 +5,7 @@
       <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
         <div class="card">
           <div class="card-header">
-            <button class="btn btn-primary pull-right" (click)="showAddPatient()">Add Patient</button>
+            <h3>Patient Types</h3>
           </div>
           <div class="card-block">
             <div class="table-responsive">
@@ -29,12 +23,10 @@
                   <td>{{patient.id}}</td>
                   <td ><a href="javascript:void(0)" [routerLink]="['/cancerTypes',patient.id]">{{patient.title}}</a></td>
                   <td>
-                    <i class="fa fa-pencil" data-toggle="tooltip" placement="top" tooltip="Edit Patient"
-                       (click)="edit(patient)"></i>
+                    <button class="btn btn-outline-primary" (click)="edit(patient)">Edit</button>
                   </td>
                   <td>
-                    <i class="fa fa-trash" data-toggle="tooltip" placement="top" tooltip="Delete Patient"
-                       (click)="delete(patient)"></i>
+                    <button class="btn btn-outline-danger" (click)="delete(patient)">Delete</button>
                   </td>
                 </tr>
                 </tbody>
@@ -46,10 +38,6 @@
     </div>
   </div>
 </div>
-
-<app-addpatienttypes *ngIf="isAddPatientModal" (onHide)="onHide('add')" [config]="{ show: true }" bsModal
-               #addModal="bs-modal" (yes)="addPerson($event)" (cancel)="onClose('add')" class="modal fade"
-               [Error]="addPersonError"></app-addpatienttypes>
 
 <app-editpatienttypes *ngIf="isEditModal" (onHide)="onHide('edit')" [config]="{ show: true }" bsModal
                 #editModal="bs-modal" (yes)="editPatientTypes($event)" (cancel)="onClose('edit')" class="modal fade" [PatientType]="Patient"></app-editpatienttypes>
